--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
     </nav>
 
     <div class="main-content">
-        <div class="intro-image" aria-label="Photo of Umar"></div>
+        <div class="intro-image" aria-label="IELTS WITH UMAR LOGO.png"></div>
         <h2>Hi! I'm Umar.</h2>
         <p>I'm a 13-year-old IELTS enthusiast from Uzbekistan, and I’ve created this website to help learners around the world achieve their dream IELTS score.</p>
 
