--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google-site-verification" content="A9j31xLsB2HvXSRVrJNl_0NrN09yKp53ogEOzvplxvw" />
     <title>Home | IELTS WITH UMAR</title>
     <style>
         body {
