--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
         .intro-image {
             width: 150px;
             height: 150px;
-            background: url('') no-repeat center/cover;
+            background: url('IELTS WITH UMAR LOGO.png') no-repeat center/cover;
             border-radius: 50%;
             margin: 0 auto 25px auto;
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
