--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About Me | IELTS WITH UMAR</title>
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="IELTS WITH UMAR LOGO.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
