--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="JCntE1RXy86HUkDJIT_m8pjibBIiwundkDTBpyZAiiY" />
     <title>Home | IELTS WITH UMAR</title>
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="IELTS WITH UMAR LOGO.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
