--- a/signup_login.html
+++ b/signup_login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sign Up / Log In | IELTS WITH UMAR</title>
+    <link rel="icon" href="IELTS WITH UMAR LOGO.png" type="image/png">
     <style>
         #user-info {
             position: absolute;
