--- a/um_reading_test.html
+++ b/um_reading_test.html
@@ -11,17 +11,12 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: white;
             color: #333;
-            background-image: repeating-linear-gradient(45deg,
-                    #e6f0ff 0,
-                    #e6f0ff 10px,
-                    #f4f9ff 10px,
-                    #f4f9ff 20px);
         }
 
         header {
-            background-color: rgb(80, 171, 255);
+            background-color: rgb(0, 200, 25);
             color: white;
             padding: 10px 20px;
             display: flex;
@@ -42,7 +37,7 @@
         }
 
         nav {
-            background-color: rgb(0, 132, 255);
+            background-color: rgb(0, 175, 25);
             display: flex;
             justify-content: center;
             gap: 10px;
@@ -60,22 +55,18 @@
         }
 
         nav a:hover {
-            background-color: #1100ff;
+            background-color: rgb(0, 150, 25);
         }
 
         .main-content {
             max-width: 900px;
             margin: 30px auto 60px;
-            background-color: white;
-            border-radius: 10px;
-            padding: 30px 40px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
 
         h1,
         h2 {
-            color: #3456fe;
+            color: rgb(0, 200, 25);
             margin-top: 40px;
             letter-spacing: 0.05em;
         }
@@ -88,19 +79,20 @@
         }
 
         footer {
-            background-color: rgb(80, 171, 255);
+            background-color: rgb(0, 175, 25);
             color: white;
             text-align: center;
             padding: 10px;
             position: fixed;
             bottom: 0;
+            font-weight: 600;
             width: 100%;
             font-size: 0.9rem;
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
         }
 
         .section-box {
-            background-color: rgb(0, 132, 255);
+            background-color: rgb(0, 200, 25);
             color: white;
             padding: 1em;
             margin: 10px 0;
@@ -124,8 +116,8 @@
 
 <body>
     <header>
-        <img src="UM ENGLISH READING TEST LOGO.png" alt="IELTS WITH UMAR Logo" width="100px" height="90px">
-        <h1 style="color: gold">Reading Test</h1>
+        <img src="UM ENGLISH READING TEST LOGO.png" alt="IELTS WITH UMAR Logo">
+        <h1 style="color: white">Reading Test</h1>
         <div id="user-info" style="color: white; position: absolute; top: 10px; right: 20px;"></div>
     </header>
 
