--- a/about.html
+++ b/about.html
@@ -11,19 +11,12 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: white;
             color: #333;
-            background-image: repeating-linear-gradient(
-                45deg,
-                #e6f0ff 0,
-                #e6f0ff 10px,
-                #f4f9ff 10px,
-                #f4f9ff 20px
-            );
         }
 
         header {
-            background-color: rgb(80, 171, 255);
+            background-color: rgb(0, 200, 25);
             color: white;
             padding: 10px 20px;
             display: flex;
@@ -44,7 +37,7 @@
         }
 
         nav {
-            background-color: rgb(0, 132, 255);
+            background-color: rgb(0, 175, 25);
             display: flex;
             justify-content: center;
             gap: 10px;
@@ -62,21 +55,18 @@
         }
 
         nav a:hover {
-            background-color: #1100ff;
+            background-color: rgb(0, 150, 25);
         }
 
         .main-content {
             max-width: 900px;
             margin: 30px auto 60px;
-            background-color: white;
-            border-radius: 10px;
-            padding: 30px 40px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
 
         h1,
         h2 {
-            color: #3456fe;
+            color: rgb(0, 200, 25);
             margin-top: 40px;
             letter-spacing: 0.05em;
         }
@@ -96,12 +86,12 @@
             border-radius: 50%;
             margin: 0 auto 25px auto;
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
-            border: 5px solid rgb(80, 171, 255);
+            border: 5px solid rgb(0, 200, 25);
         }
 
         /* Telegram highlight */
         .telegram-link {
-            background-color: rgb(80, 171, 255);
+            background-color: rgb(0, 200, 25);
             color: white;
             font-weight: 700;
             font-size: 1.1rem;
@@ -110,7 +100,7 @@
             max-width: 350px;
             margin: 30px auto 0;
             text-align: center;
-            box-shadow: 0 4px 10px rgba(80, 171, 255, 0.6);
+            box-shadow: 0 4px 10px rgb(0, 200, 25, 0.6);
             transition: background-color 0.3s ease;
         }
 
@@ -120,30 +110,31 @@
         }
 
         .telegram-link:hover {
-            background-color: rgb(0, 132, 255);
-            box-shadow: 0 6px 15px rgba(0, 132, 255, 0.8);
+            background-color: rgb(0, 175, 25);
+            box-shadow: 0 6px 15px rgb(0, 175, 25, 0.8);
         }
 
         /* Goals section */
         .goals {
             background-color: #e0f0ff;
-            border-left: 6px solid rgb(80, 171, 255);
+            border-left: 6px solid rgb(0, 200, 25);
             padding: 20px 25px;
             margin-top: 40px;
             border-radius: 8px;
-            color: #234e9c;
+            color: rgb(0, 175, 25);
             font-style: italic;
             font-size: 1.1rem;
             box-shadow: 0 3px 12px rgba(0, 0, 0, 0.1);
         }
 
         footer {
-            background-color: rgb(80, 171, 255);
+            background-color: rgb(0, 175, 25);
             color: white;
             text-align: center;
             padding: 10px;
             position: fixed;
             bottom: 0;
+            font-weight: 600;
             width: 100%;
             font-size: 0.9rem;
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
@@ -164,7 +155,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="IELTS WITH UMAR LOGO.png" alt="IELTS WITH UMAR Logo" width="100px" height="90px"></a>
+        <a href="index.html"><img src="IELTS WITH UMAR LOGO.png" alt="IELTS WITH UMAR Logo"></a>
         <h1 style="color: white;">About Me</h1>
         <div id="user-info" style="color: white; position: absolute; top: 10px; right: 20px;"></div>
     </header>
@@ -193,12 +184,23 @@
 
         <p>Let’s keep learning and improving — together!</p>
 
+        <hr>
+
+        <img src="UMAR IELTS.jpg" width="400px" height="575px">
+        <p>My IELTS Certificate.</p>
+
+        <br>
+
+        <img src="IELTS WITH UMAR LOGO ORIGINAL.jpg">
+        <p>The original logo.</p>
+
         <div class="telegram-link">
             <a href="https://t.me/IELTS_WITH_UMAR" target="_blank" rel="noopener noreferrer">🔵Telegram Channel🔵 </a>
         </div>
+        <p>My Telegram channel.</p>
 
         <div class="goals">
-            <h2>My Goals</h2>
+            <h2>My Goal</h2>
             <p>To empower learners worldwide to confidently master the IELTS exam and open doors to new opportunities through dedication, clear guidance, and consistent practice.</p>
         </div>
     </div>
