--- a/reading.html
+++ b/reading.html
@@ -11,17 +11,12 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: white;
             color: #333;
-            background-image: repeating-linear-gradient(45deg,
-                    #e6f0ff 0,
-                    #e6f0ff 10px,
-                    #f4f9ff 10px,
-                    #f4f9ff 20px);
         }
 
         header {
-            background-color: rgb(80, 171, 255);
+            background-color: rgb(0, 200, 25);
             color: white;
             padding: 10px 20px;
             display: flex;
@@ -42,7 +37,7 @@
         }
 
         nav {
-            background-color: rgb(0, 132, 255);
+            background-color: rgb(0, 175, 25);
             display: flex;
             justify-content: center;
             gap: 10px;
@@ -60,23 +55,19 @@
         }
 
         nav a:hover {
-            background-color: #1100ff;
+            background-color: rgb(0, 150, 25);
         }
 
         .main-content {
             max-width: 900px;
             margin: 30px auto 60px;
-            background-color: white;
-            border-radius: 10px;
-            padding: 30px 40px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
 
         h1,
         h2,
         h3 {
-            color: #3456fe;
+            color: rgb(0, 200, 25);
             margin-top: 40px;
             letter-spacing: 0.05em;
         }
@@ -89,12 +80,13 @@
         }
 
         footer {
-            background-color: rgb(80, 171, 255);
+            background-color: rgb(0, 175, 25);
             color: white;
             text-align: center;
             padding: 10px;
             position: fixed;
             bottom: 0;
+            font-weight: 600;
             width: 100%;
             font-size: 0.9rem;
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
@@ -111,53 +103,20 @@
 
         th,
         td {
-            background-color: #e0f0ff;
+            background-color: #e4ffe0;
             padding: 12px 15px;
             text-align: center;
             font-weight: 600;
-            color: #234e9c;
+            color: rgb(0, 175, 25);
         }
 
         th {
-            background-color: #3498db;
+            background-color: rgb(0, 175, 25);
             color: white;
         }
 
         .section-box {
-            background-color: rgb(0, 132, 255);
-            color: white;
-            padding: 1em;
-            margin: 10px 0;
-            border-radius: 8px;
-            text-align: center;
-            font-weight: 600;
-        }
-
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0 40px;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-
-        th,
-        td {
-            background-color: #e0f0ff;
-            padding: 12px 15px;
-            text-align: center;
-            font-weight: 600;
-            color: #234e9c;
-        }
-
-        th {
-            background-color: #3498db;
-            color: white;
-        }
-
-        .section-box {
-            background-color: rgb(0, 132, 255);
+            background-color: rgb(0, 200, 25);
             color: white;
             padding: 1em;
             margin: 10px 0;
@@ -181,8 +140,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="IELTS WITH UMAR LOGO.png" alt="IELTS WITH UMAR Logo" width="100px"
-                height="90px"></a>
+        <a href="index.html"><img src="IELTS WITH UMAR LOGO.png" alt="IELTS WITH UMAR Logo"></a>
         <h1 style="color: white">Reading</h1>
         <div id="user-info" style="color: white; position: absolute; top: 10px; right: 20px;"></div>
     </header>
