--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="google-site-verification" content="5NEqBbMYXVTcGv457nmYr7eoZSArpW2foH3i3Q43SPM" />
+    <meta name="google-site-verification" content="JCntE1RXy86HUkDJIT_m8pjibBIiwundkDTBpyZAiiY" />
     <title>Home | IELTS WITH UMAR</title>
     <link rel="icon" href="IELTS WITH UMAR LOGO.png" type="image/png">
     <style>
@@ -22,6 +22,7 @@
             padding: 10px 20px;
             display: flex;
             align-items: center;
+            position: relative;
         }
 
         header img {
@@ -238,11 +239,24 @@
             position: absolute;
             top: 10px;
             right: 20px;
-            font-weight: bold;
-            font-size: 1.5rem;
-            /* Increase the font size here */
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        #user-photo {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid white;
+            display: none;
+        }
+
+        #user-display-name {
             color: white;
-            /* Keep the text white */
+            font-weight: bold;
+            font-size: 1.1rem;
         }
     </style>
 </head>
@@ -251,9 +265,11 @@
     <header>
         <a href="index.html"><img src="IELTS WITH UMAR LOGO.png" alt="IELTS WITH UMAR Logo"></a>
         <h1 style="color: white;">Home</h1>
-        <div id="user-info" style="color: white; position: absolute; top: 10px; right: 20px;"></div>
+        <div id="user-info">
+            <img id="user-photo" src="IELTS WITH UMAR LOGO.png" alt="Profile Photo">
+            <span id="user-display-name"></span>
+        </div>
     </header>
-
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
@@ -264,47 +280,28 @@
         <a href="um_grammar_test.html">Grammar Test</a>
         <a href="um_listening_test.html">Listening Test</a>
         <a href="um_reading_test.html">Reading Test</a>
-        <a href="signup_login.html">Sign up / Log in</a>
+        <a href="um_writing_check.html">Essay Checker</a>
+        <a href="myprofile.html">My Profile</a>
     </nav>
+    <img src="Website Banner.png" width="100%">
     <div class="main-content">
-        <h2>Welcome to IELTS WITH UMAR!</h2>
-        <p>Your friendly guide to mastering the IELTS exam, no matter your level. Explore clear lessons, useful tips, and practice tests to improve your Listening, Reading, Writing, and Speaking skills.</p>
-
-        <div class="features">
-            <div class="feature-box">
-                <h3>Listening</h3>
-                <p>Learn strategies to understand every part of the Listening section and practice with real exam-style audio.</p>
-            </div>
-            <div class="feature-box">
-                <h3>Reading</h3>
-                <p>Build reading skills for different question types with tips and sample passages to boost your speed and accuracy.</p>
-            </div>
-            <div class="feature-box">
-                <h3>Writing</h3>
-                <p>Discover how to organize essays, improve grammar, and score high with effective writing techniques.</p>
-            </div>
-            <div class="feature-box">
-                <h3>Speaking</h3>
-                <p>Practice speaking confidently with common topics, vocabulary ideas, and tips for a natural conversation.</p>
-            </div>
-        </div>
 
         <section class="feedback-section" aria-label="Students' feedback">
             <h2>What Students Say</h2>
 
             <blockquote class="feedback-quote">
                 "Umar’s lessons made IELTS easy to understand. Thanks to his clear explanations, I improved my writing score by 2 bands!"
-                <div class="feedback-author">— Amin from Uzbekistan</div>
+                <div class="feedback-author">— Amin Yusupov</div>
             </blockquote>
 
             <blockquote class="feedback-quote">
                 "I loved the speaking tips and practice tests. They really helped me gain confidence."
-                <div class="feedback-author">— John from Kenya</div>
+                <div class="feedback-author">— Ibrohim Jalilov</div>
             </blockquote>
 
             <blockquote class="feedback-quote">
                 "The website’s structure and simplicity made studying IELTS fun and effective!"
-                <div class="feedback-author">— Maria from Brazil</div>
+                <div class="feedback-author">— Saidumar Jaxongirov</div>
             </blockquote>
         </section>
 
@@ -332,7 +329,6 @@
     <footer>
         <p style="color: white;">&copy; 2025 IELTS WITH UMAR | All rights reserved.</p>
     </footer>
-    <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
 
@@ -348,17 +344,25 @@
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
 
-        const userInfo = document.getElementById('user-info');
+        const userPhoto = document.getElementById('user-photo');
+        const userDisplayName = document.getElementById('user-display-name');
 
         auth.onAuthStateChanged(user => {
             if (user) {
-                userInfo.textContent = `${user.displayName || user.email}`;
+                if (user.photoURL) {
+                    userPhoto.src = user.photoURL;
+                    userPhoto.style.display = 'block';
+                } else {
+                    userPhoto.src = "IELTS WITH UMAR LOGO.png"; // Set a default image
+                    userPhoto.style.display = 'block';
+                }
+                userDisplayName.textContent = user.displayName || user.email;
             } else {
-                userInfo.textContent = '';
+                userPhoto.style.display = 'none';
+                userDisplayName.textContent = '';
             }
         });
     </script>
-
 </body>
 
 </html>
