--- a/myprofile.html
+++ b/myprofile.html
@@ -14,6 +14,9 @@
             padding: 0;
             background-color: #f0f4f7;
             color: #333;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
         header {
@@ -62,7 +65,8 @@
         }
 
         .main-content {
-            min-height: calc(100vh - 120px);
+            flex-grow: 1;
+            padding: 20px;
         }
 
         .profile-card {
@@ -233,7 +237,7 @@
             margin-right: 15px;
             color: rgb(0, 200, 25);
         }
-        
+
         .info-list li .name-section,
         .info-list li .password-section {
             display: flex;
@@ -285,10 +289,12 @@
             border-radius: 5px;
             cursor: pointer;
         }
+
         .name-edit-form .save-btn {
             background-color: rgb(0, 200, 25);
             color: white;
         }
+
         .name-edit-form .cancel-btn {
             background-color: #ccc;
             color: #333;
@@ -374,13 +380,21 @@
             background-color: rgb(0, 175, 25);
             color: white;
             text-align: center;
-            padding: 25px 10px;
-            position: static;
+            padding: 10px;
+            position: fixed;
             bottom: 0;
+            font-weight: 600;
             width: 100%;
-            font-size: 1.1rem;
+            font-size: 0.9rem;
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
-            margin-top: 50px;
+        }
+
+        p {
+            font-size: 1.1rem;
+            line-height: 1.75;
+            margin: 18px 0;
+            color: #444;
+            text-align: center;
         }
     </style>
 </head>
@@ -483,9 +497,9 @@
             </div>
         </div>
     </div>
-
+    <p>_</p>
     <footer>
-        <p>&copy; 2025 IELTS WITH UMAR | All rights reserved.</p>
+        <p style="color: white; text-align: center;">&copy; 2025 IELTS WITH UMAR | All rights reserved.</p>
     </footer>
 
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
@@ -534,7 +548,7 @@
         const updatePhotoSection = document.getElementById("update-photo-section");
         const photoUrlInput = document.getElementById("photo-url");
         const submitPhotoUrlBtn = document.getElementById("submit-photo-url");
-        
+
         // New elements for name change
         const changeUsernameBtn = document.getElementById("change-username-btn");
         const nameDisplayWrapper = document.querySelector(".name-display-wrapper");
