--- a/pricing.html
+++ b/pricing.html
@@ -650,7 +650,8 @@
             "dostonbr2@gmail.com",
             "shoxish@mail.ru",
             "nozimshavkiev@gmail.com",
-            "nematullayevsaidkamol2@gmail.com"
+            "nematullayevsaidkamol2@gmail.com",
+            "muhammadjonsh1243@gmail.com"
         ];
 
         auth.onAuthStateChanged(user => {
@@ -693,7 +694,7 @@
 
         // Modified function to handle the Telegram link with a dynamic message
         function contactTelegram(plan) {
-            const telegramUsername = 'galaxy_u7';
+            const telegramUsername = 'intrinix';
             let message = `Hello, I would like to purchase the ${plan}.`;
             const telegramURL = `https://t.me/${telegramUsername}?text=${encodeURIComponent(message)}`;
             window.open(telegramURL, '_blank');
