--- a/speaking_topics.html
+++ b/speaking_topics.html
@@ -542,7 +542,8 @@
             "dostonbr2@gmail.com",
             "shoxish@mail.ru",
             "nozimshavkiev@gmail.com",
-            "nematullayevsaidkamol2@gmail.com"
+            "nematullayevsaidkamol2@gmail.com",
+            "muhammadjonsh1243@gmail.com"
         ];
 
         auth.onAuthStateChanged(user => {
