--- a/myprofile.html
+++ b/myprofile.html
@@ -963,7 +963,8 @@
             "dostonbr2@gmail.com",
             "shoxish@mail.ru",
             "nozimshavkiev@gmail.com",
-            "nematullayevsaidkamol2@gmail.com"
+            "nematullayevsaidkamol2@gmail.com",
+            "muhammadjonsh1243@gmail.com"
         ];
 
         function showMessage(msg, color = "red", target = messageDiv) {
