--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         /* General Styles */
-        html, body {
+        html,
+        body {
             width: 100%;
             height: 100%;
             margin: 0;
@@ -49,6 +51,7 @@
             0% {
                 transform: rotate(0deg);
             }
+
             100% {
                 transform: rotate(360deg);
             }
@@ -186,7 +189,8 @@
             background: linear-gradient(135deg, rgb(0, 200, 25) 0%, rgb(0, 150, 25) 50%, rgb(0, 175, 25) 100%);
             display: flex;
             align-items: center;
-            justify-content: center; /* Center content horizontally */
+            justify-content: center;
+            /* Center content horizontally */
             color: white;
             padding: 40px 8%;
             box-sizing: border-box;
@@ -221,7 +225,8 @@
         }
 
         /* Remove neon effects */
-        .highlight, .highlight-only-uppercase {
+        .highlight,
+        .highlight-only-uppercase {
             color: white;
             text-shadow: none;
         }
@@ -280,7 +285,8 @@
             text-align: center;
         }
 
-        h1, h2 {
+        h1,
+        h2 {
             color: rgb(0, 200, 25);
             margin-top: 40px;
             letter-spacing: 0.05em;
@@ -620,8 +626,59 @@
                 transform: translateX(0);
             }
         }
+
+        /* User Info Styles */
+        #user-info {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 8px 12px;
+            border-radius: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s ease;
+            background-color: transparent;
+            /* Default background */
+        }
+
+        /* Class for premium styling (this gives the gold background) */
+        .premium-user-info {
+            background-color: #FFD700 !important;
+        }
+
+        #user-photo {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid white;
+            display: none;
+        }
+
+        #user-display-name {
+            color: white;
+            font-weight: bold;
+            font-size: 1.1rem;
+        }
+
+        /* CSS for the premium badge (fa-star) */
+        .premium-badge {
+            font-size: 1.2rem;
+            margin-left: 5px;
+            vertical-align: middle;
+        }
+
+        /* CSS to style the Font Awesome star icon */
+        .premium-badge i {
+            color: #FFD700;
+            /* Gold color */
+            text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+        }
     </style>
 </head>
+
 <body>
     <div class="loading-overlay" id="loadingOverlay">
         <div class="loading-spinner"></div>
@@ -660,13 +717,16 @@
     <section class="hero-banner">
         <div class="hero-content">
             <h2>Your Path to <span style="color: rgb(0, 255, 25);">IELTS Success</span></h2>
-            <p>We provide expert guidance, practice materials, and proven strategies to help you achieve your target IELTS band score. Whether you’re aiming for study, work, or migration, we’re here to make your journey easier and more effective. <span style="color: rgb(0, 255, 25);">LEARN. PRACTICE. WIN.</span></p>
+            <p>We provide expert guidance, practice materials, and proven strategies to help you achieve your target
+                IELTS band score. Whether you’re aiming for study, work, or migration, we’re here to make your journey
+                easier and more effective. <span style="color: rgb(0, 255, 25);">LEARN. PRACTICE. WIN.</span></p>
             <div class="hero-buttons">
                 <a href="#" id="banner-cta-button" class="cta-button"></a>
             </div>
         </div>
         <div class="hero-image-container">
-            <img src="https://s3-eu-west-1.amazonaws.com/alt-cdn/chrysos/images/blog/435/large/chrysos-hr-healthy-happy-while-studying-6523df1110273.jpg" alt="Person studying for IELTS">
+            <img src="https://s3-eu-west-1.amazonaws.com/alt-cdn/chrysos/images/blog/435/large/chrysos-hr-healthy-happy-while-studying-6523df1110273.jpg"
+                alt="Person studying for IELTS">
         </div>
     </section>
 
@@ -677,8 +737,12 @@
             </div>
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>Hello! I'm Umar, a dedicated IELTS instructor with a mission to help students achieve their dream scores. I've been in the field for over 2 years, and my own experience of scoring a Band 7.0 on the IELTS exam has given me a deep understanding of what it takes to succeed.</p>
-                <p>My passion is to simplify the complexities of the IELTS test. I focus on practical strategies and personalized guidance to help you navigate each section with confidence. Whether you're aiming for a 7.0 or a 9.0, my goal is to equip you with the knowledge and skills needed to ace the exam.</p>
+                <p>Hello! I'm Umar, a dedicated IELTS instructor with a mission to help students achieve their dream
+                    scores. I've been in the field for over 2 years, and my own experience of scoring a Band 7.0 on the
+                    IELTS exam has given me a deep understanding of what it takes to succeed.</p>
+                <p>My passion is to simplify the complexities of the IELTS test. I focus on practical strategies and
+                    personalized guidance to help you navigate each section with confidence. Whether you're aiming for a
+                    7.0 or a 9.0, my goal is to equip you with the knowledge and skills needed to ace the exam.</p>
             </div>
         </section>
 
@@ -720,7 +784,8 @@
     <footer class="footer">
         <div class="footer-section">
             <h3>IELTS WITH UMAR</h3>
-            <p>IELTS WITH UMAR is your ultimate online platform for IELTS preparation, offering expert guidance and comprehensive tools to help you achieve your desired band score.</p>
+            <p>IELTS WITH UMAR is your ultimate online platform for IELTS preparation, offering expert guidance and
+                comprehensive tools to help you achieve your desired band score.</p>
         </div>
         <div class="footer-section">
             <h3>Quick Links</h3>
@@ -748,10 +813,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
     <script>
         // Loading animation script (UPDATED)
-        window.onload = function() {
-            setTimeout(function() {
+        window.onload = function () {
+            setTimeout(function () {
                 document.getElementById('loadingOverlay').style.opacity = '0';
-                setTimeout(function() {
+                setTimeout(function () {
                     document.getElementById('loadingOverlay').style.display = 'none';
                 }, 500);
             }, 500);
@@ -762,7 +827,7 @@
             document.getElementById(id).classList.toggle("show");
         }
 
-        window.onclick = function(event) {
+        window.onclick = function (event) {
             if (!event.target.matches('.dropbtn')) {
                 var dropdowns = document.getElementsByClassName("dropdown-content");
                 for (var i = 0; i < dropdowns.length; i++) {
@@ -824,10 +889,9 @@
                     // User is premium
                     userInfo.classList.add('premium-user-info');
 
-                    const badge = document.createElement('span');
+                    const badge = document.createElement('i');
                     badge.id = 'premium-badge';
-                    badge.innerHTML = '⭐';
-                    badge.className = 'premium-badge';
+                    badge.className = 'fas fa-star premium-badge'; // FAS = Solid, FA-STAR = Star icon
                     userDisplayName.appendChild(badge);
 
                     // If user has premium, button says "PREMIUM ACTIVE" and is disabled
@@ -846,10 +910,10 @@
                     bannerCtaButton.style.backgroundColor = '#FFD700';
                     bannerCtaButton.style.color = '#333';
                     bannerCtaButton.style.cursor = 'pointer';
-                    bannerCtaButton.onmouseover = function() {
+                    bannerCtaButton.onmouseover = function () {
                         this.style.backgroundColor = '#E5C100';
                     };
-                    bannerCtaButton.onmouseout = function() {
+                    bannerCtaButton.onmouseout = function () {
                         this.style.backgroundColor = '#FFD700';
                     };
                 }
@@ -866,14 +930,15 @@
                 bannerCtaButton.style.backgroundColor = 'rgb(0, 150, 25)';
                 bannerCtaButton.style.color = 'white';
                 bannerCtaButton.style.cursor = 'pointer';
-                bannerCtaButton.onmouseover = function() {
+                bannerCtaButton.onmouseover = function () {
                     this.style.backgroundColor = 'rgb(0, 200, 25)';
                 };
-                bannerCtaButton.onmouseout = function() {
+                bannerCtaButton.onmouseout = function () {
                     this.style.backgroundColor = 'rgb(0, 150, 25)';
                 };
             }
         });
     </script>
 </body>
+
 </html>
