--- a/index.html
+++ b/index.html
@@ -862,7 +862,8 @@
             "premium@gmail.com",
             "shoxish@mail.ru",
             "nozimshavkiev@gmail.com",
-            "muhammadjonsh1243@gmail.com"
+            "muhammadjonsh1243@gmail.com",
+            "thezloy112@gmail.com"
         ];
 
         auth.onAuthStateChanged(user => {
