--- a/listening_tests.html
+++ b/listening_tests.html
@@ -651,7 +651,8 @@
             "premium@gmail.com",
             "shoxish@mail.ru",
             "nozimshavkiev@gmail.com",
-            "muhammadjonsh1243@gmail.com"
+            "muhammadjonsh1243@gmail.com",
+            "thezloy112@gmail.com"
         ];
 
         const listeningTests = [
