--- a/reading_tests.html
+++ b/reading_tests.html
@@ -635,7 +635,8 @@
             "premium@gmail.com",
             "shoxish@mail.ru",
             "nozimshavkiev@gmail.com",
-            "muhammadjonsh1243@gmail.com"
+            "muhammadjonsh1243@gmail.com",
+            "thezloy112@gmail.com"
         ];
 
         const readingTests = [
