--- a/index.html
+++ b/index.html
@@ -863,7 +863,9 @@
             "shoxish@mail.ru",
             "nozimshavkiev@gmail.com",
             "muhammadjonsh1243@gmail.com",
-            "thezloy112@gmail.com"
+            "thezloy112@gmail.com",
+            "shoilyosovshosamad@gmail.com", 
+            "saidumarjaxongirov@gmail.com"
         ];
 
         auth.onAuthStateChanged(user => {
