--- a/listening_tests.html
+++ b/listening_tests.html
@@ -652,7 +652,9 @@
             "shoxish@mail.ru",
             "nozimshavkiev@gmail.com",
             "muhammadjonsh1243@gmail.com",
-            "thezloy112@gmail.com"
+            "thezloy112@gmail.com",
+            "shoilyosovshosamad@gmail.com", 
+            "saidumarjaxongirov@gmail.com"
         ];
 
         const listeningTests = [
