--- a/myprofile.html
+++ b/myprofile.html
@@ -1179,7 +1179,9 @@
             "shoxish@mail.ru",
             "nozimshavkiev@gmail.com",
             "muhammadjonsh1243@gmail.com",
-            "thezloy112@gmail.com"
+            "thezloy112@gmail.com",
+            "shoilyosovshosamad@gmail.com", 
+            "saidumarjaxongirov@gmail.com"
         ];
 
         function showMessage(msg, color = "red", target = messageDiv) {
