--- a/writing.html
+++ b/writing.html
@@ -821,7 +821,9 @@
             "shoxish@mail.ru",
             "nozimshavkiev@gmail.com",
             "muhammadjonsh1243@gmail.com",
-            "thezloy112@gmail.com"
+            "thezloy112@gmail.com",
+            "shoilyosovshosamad@gmail.com", 
+            "saidumarjaxongirov@gmail.com"
         ];
 
         auth.onAuthStateChanged(user => {
