--- a/listening.html
+++ b/listening.html
@@ -725,7 +725,10 @@
             "muhammadjonsh1243@gmail.com",
             "thezloy112@gmail.com",
             "shoilyosovshosamad@gmail.com", 
-            "saidumarjaxongirov@gmail.com"
+            "saidumarjaxongirov@gmail.com",
+            "javoxirabduvasiyev@gmail.com",
+            "shoxjaxon303001@gmail.com",
+            "shomurodovnodirbek94@gmail.com"
         ];
 
         auth.onAuthStateChanged(user => {
