--- a/pricing.html
+++ b/pricing.html
@@ -680,7 +680,7 @@
         const userPhoto = document.getElementById('user-photo');
         const userDisplayName = document.getElementById('user-display-name');
 
-        const premiumUsers = ["yusupovumarcr7@gmail.com", "premium@gmail.com", "shoxish@mail.ru", "nozimshavkiev@gmail.com", "muhammadjonsh1243@gmail.com", "thezloy112@gmail.com", "shoilyosovshosamad@gmail.com", "saidumarjaxongirov@gmail.com"];
+        const premiumUsers = ["yusupovumarcr7@gmail.com", "premium@gmail.com", "shoxish@mail.ru", "nozimshavkiev@gmail.com", "muhammadjonsh1243@gmail.com", "thezloy112@gmail.com", "shoilyosovshosamad@gmail.com", "saidumarjaxongirov@gmail.com", "javoxirabduvasiyev@gmail.com", "shoxjaxon303001@gmail.com", "shomurodovnodirbek94@gmail.com"];
 
         auth.onAuthStateChanged(user => {
             const existingBadge = document.getElementById('premium-badge');
