--- a/pricing.html
+++ b/pricing.html
@@ -473,14 +473,13 @@
                 <h2>IELTS WITH UMAR PREMIUM OFFERS</h2>
                 <ul>
                     <li>⭐ Gold Profile</li>
-                    <li>🎧 Unlimited Reading Tests</li>
                     <li>🎧 Unlimited Listening Tests</li>
+                    <li>📚 Unlimited Reading Tests</li>
                     <li>📖 Downloadable Books (contact on Telegram)</li>
                     <li>🎤 Exclusive Speaking Topics</li>
                     <li>📝 Task 1 & 2 Sample Essays</li>
                     <li>🎖️ Premium Badge</li>
                     <li>✅ Essay Feedback</li>
-                    <li>🎁 Access to Giveaways</li>
                 </ul>
             </div>
 
